syntax = "proto2";

import "google/protobuf/empty.proto";
import "model.proto";

option go_package = "github.com/syzoj/syzoj-ng-go/app/core/protos";

service Judge {
	rpc FetchTask (JudgeRequest) returns (FetchTaskResult) {}
	rpc SetTaskProgress (stream TaskProgress) returns (google.protobuf.Empty) {}
	rpc SetTaskResult (SetTaskResultMessage) returns (google.protobuf.Empty) {}
}

message JudgeRequest {
	optional ObjectID judger_id = 3;
	optional string judger_token = 2;
}

message FetchTaskResult {
	optional bool success = 1;
	optional Task task = 2;
}

message Task {
	optional int64 task_tag = 1;
	optional ObjectID problem_id = 5;
	optional SubmissionContent content = 6;
}

message TaskProgress {
	
}

message SetTaskResultMessage {
	optional ObjectID judger_id = 5;
	optional string judger_token = 2;
	optional int64 task_tag = 3;
	optional SubmissionResult result = 6;
}
